- ViewModel tests - project README